--- a/archives/toutiao-search/2024-03-01.md
+++ b/archives/toutiao-search/2024-03-01.md
@@ -1,59 +1,71 @@
 # 2024-03-01
 
-共 324 条
+共 333 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Mar 01 2024 20:08:48 GMT+0800 (China Standard Time) -->
-1. [德州撞人事故2死6伤 市民排队献血](https://so.toutiao.com/search?keyword=德州撞人事故2死6伤+市民排队献血)
+<!-- 最后更新时间 Fri Mar 01 2024 21:01:00 GMT+0800 (China Standard Time) -->
+1. [山东男子驾车撞人致2死6重伤](https://so.toutiao.com/search?keyword=山东男子驾车撞人致2死6重伤)
 1. [娃哈哈发文请大家理性消费](https://so.toutiao.com/search?keyword=娃哈哈发文请大家理性消费)
 1. [全国政协会议议程来了](https://so.toutiao.com/search?keyword=全国政协会议议程来了)
-1. [山东男子驾车撞人致2死6重伤](https://so.toutiao.com/search?keyword=山东男子驾车撞人致2死6重伤)
-1. [同框对白见证老兵热辣滚烫的青春](https://so.toutiao.com/search?keyword=同框对白见证老兵热辣滚烫的青春)
+1. [德州撞人事故2死6伤 市民排队献血](https://so.toutiao.com/search?keyword=德州撞人事故2死6伤+市民排队献血)
 1. [利率10%的银行存款产品现身](https://so.toutiao.com/search?keyword=利率10%的银行存款产品现身)
+1. [最高法详解核准劳荣枝死刑原因](https://so.toutiao.com/search?keyword=最高法详解核准劳荣枝死刑原因)
 1. [贵州省委巡视组对六盘水市开展巡视](https://so.toutiao.com/search?keyword=贵州省委巡视组对六盘水市开展巡视)
-1. [中方发布关于北部湾北部领海基线声明](https://so.toutiao.com/search?keyword=中方发布关于北部湾北部领海基线声明)
-1. [警方辟谣惠安某塑业公司发生火情](https://so.toutiao.com/search?keyword=警方辟谣惠安某塑业公司发生火情)
 1. [大V：金门事件再不给交待将有剧变](https://so.toutiao.com/search?keyword=大V：金门事件再不给交待将有剧变)
+1. [多家快递公司回应新规](https://so.toutiao.com/search?keyword=多家快递公司回应新规)
 1. [理想MEGA正式上市 售价55.98万元](https://so.toutiao.com/search?keyword=理想MEGA正式上市+售价55.98万元)
 1. [中国留学生参加搏击赛被打成植物人](https://so.toutiao.com/search?keyword=中国留学生参加搏击赛被打成植物人)
-1. [多家快递公司回应新规](https://so.toutiao.com/search?keyword=多家快递公司回应新规)
-1. [娃哈哈官方店铺销量2天涨超500%](https://so.toutiao.com/search?keyword=娃哈哈官方店铺销量2天涨超500%)
-1. [理想要求中国所有门店都展示MEGA](https://so.toutiao.com/search?keyword=理想要求中国所有门店都展示MEGA)
 1. [男子用油膜清洁剂擦电视结果亮了](https://so.toutiao.com/search?keyword=男子用油膜清洁剂擦电视结果亮了)
+1. [警方辟谣惠安某塑业公司发生火情](https://so.toutiao.com/search?keyword=警方辟谣惠安某塑业公司发生火情)
+1. [理想要求中国所有门店都展示MEGA](https://so.toutiao.com/search?keyword=理想要求中国所有门店都展示MEGA)
+1. [娃哈哈官方店铺销量2天涨超500%](https://so.toutiao.com/search?keyword=娃哈哈官方店铺销量2天涨超500%)
+1. [姐弟烧伤四位姨妈剃光头捐头皮](https://so.toutiao.com/search?keyword=姐弟烧伤四位姨妈剃光头捐头皮)
 1. [开学第一课体育老师展示“地躺拳”](https://so.toutiao.com/search?keyword=开学第一课体育老师展示“地躺拳”)
+1. [前韩国女团成员解散后做女工](https://so.toutiao.com/search?keyword=前韩国女团成员解散后做女工)
+1. [政协委员建议取消强制自动续费](https://so.toutiao.com/search?keyword=政协委员建议取消强制自动续费)
+1. [网友称公司饮用水全部采购娃哈哈](https://so.toutiao.com/search?keyword=网友称公司饮用水全部采购娃哈哈)
+1. [《猎冰》剧情高能反转](https://so.toutiao.com/search?keyword=《猎冰》剧情高能反转)
+1. [快递员：挣的还没罚款多只能换工作](https://so.toutiao.com/search?keyword=快递员：挣的还没罚款多只能换工作)
+1. [11个月大婴儿被兔子咬断手指](https://so.toutiao.com/search?keyword=11个月大婴儿被兔子咬断手指)
+1. [延迟退休对不同年代人影响多大](https://so.toutiao.com/search?keyword=延迟退休对不同年代人影响多大)
+1. [“点读机女孩”已进手术室](https://so.toutiao.com/search?keyword=“点读机女孩”已进手术室)
+1. [兴高采烈去退税 结果要补1万8](https://so.toutiao.com/search?keyword=兴高采烈去退税+结果要补1万8)
+1. [深夜家中监控被关 女子机智报警](https://so.toutiao.com/search?keyword=深夜家中监控被关+女子机智报警)
+1. [理想L7/8/9上市 31.98万起](https://so.toutiao.com/search?keyword=理想L7/8/9上市+31.98万起)
+1. [隔空猥亵少女后又将其强奸该当何罪](https://so.toutiao.com/search?keyword=隔空猥亵少女后又将其强奸该当何罪)
+1. [比亚迪大宗交易成交1759万元](https://so.toutiao.com/search?keyword=比亚迪大宗交易成交1759万元)
+1. [实探广州制衣村招工：工人挑老板](https://so.toutiao.com/search?keyword=实探广州制衣村招工：工人挑老板)
+1. [博主：比亚迪降价意义不止于价格战](https://so.toutiao.com/search?keyword=博主：比亚迪降价意义不止于价格战)
+1. [央视主持人任鲁豫有新身份](https://so.toutiao.com/search?keyword=央视主持人任鲁豫有新身份)
+1. [记者谈渔船事件两岸谈判临时停止](https://so.toutiao.com/search?keyword=记者谈渔船事件两岸谈判临时停止)
+1. [甜馨为cos初音未来道歉](https://so.toutiao.com/search?keyword=甜馨为cos初音未来道歉)
+1. [台名嘴谈美国等十国组建“6G联盟”](https://so.toutiao.com/search?keyword=台名嘴谈美国等十国组建“6G联盟”)
+1. [A股成交额连续4个交易日超万亿元](https://so.toutiao.com/search?keyword=A股成交额连续4个交易日超万亿元)
+1. [麻辣王子创始人儿子被隐瞒家产](https://so.toutiao.com/search?keyword=麻辣王子创始人儿子被隐瞒家产)
+1. [《猎冰》导演称给姚安娜打60分](https://so.toutiao.com/search?keyword=《猎冰》导演称给姚安娜打60分)
+1. [女子用暗语机智报警获救](https://so.toutiao.com/search?keyword=女子用暗语机智报警获救)
+1. [女生靠男子肩膀睡觉视频被父母刷到](https://so.toutiao.com/search?keyword=女生靠男子肩膀睡觉视频被父母刷到)
+1. [中介：房价不能再跌了](https://so.toutiao.com/search?keyword=中介：房价不能再跌了)
+1. [显微镜下的AD钙奶](https://so.toutiao.com/search?keyword=显微镜下的AD钙奶)
+1. [退税](https://so.toutiao.com/search?keyword=退税)
+1. [拜登在得州活动现场愣神](https://so.toutiao.com/search?keyword=拜登在得州活动现场愣神)
+1. [辽宁一女子在商场内跳楼](https://so.toutiao.com/search?keyword=辽宁一女子在商场内跳楼)
+1. [广州临时工市场现状](https://so.toutiao.com/search?keyword=广州临时工市场现状)
+1. [国防部回应美日大规模“夺岛演习”](https://so.toutiao.com/search?keyword=国防部回应美日大规模“夺岛演习”)
+1. [妈妈从产房出来孩子举动令人泪目](https://so.toutiao.com/search?keyword=妈妈从产房出来孩子举动令人泪目)
+1. [老弟去姐家串门被狗追](https://so.toutiao.com/search?keyword=老弟去姐家串门被狗追)
+1. [同框对白见证老兵热辣滚烫的青春](https://so.toutiao.com/search?keyword=同框对白见证老兵热辣滚烫的青春)
+1. [中方发布关于北部湾北部领海基线声明](https://so.toutiao.com/search?keyword=中方发布关于北部湾北部领海基线声明)
 1. [拜登体检不做认知测试遭质疑](https://so.toutiao.com/search?keyword=拜登体检不做认知测试遭质疑)
 1. [理想汽车宣布提高一线员工工资](https://so.toutiao.com/search?keyword=理想汽车宣布提高一线员工工资)
-1. [深夜家中监控被关 女子机智报警](https://so.toutiao.com/search?keyword=深夜家中监控被关+女子机智报警)
-1. [网友称公司饮用水全部采购娃哈哈](https://so.toutiao.com/search?keyword=网友称公司饮用水全部采购娃哈哈)
-1. [兴高采烈去退税 结果要补1万8](https://so.toutiao.com/search?keyword=兴高采烈去退税+结果要补1万8)
-1. [女子用暗语机智报警获救](https://so.toutiao.com/search?keyword=女子用暗语机智报警获救)
-1. [甜馨为cos初音未来道歉](https://so.toutiao.com/search?keyword=甜馨为cos初音未来道歉)
-1. [理想L7/8/9上市 31.98万起](https://so.toutiao.com/search?keyword=理想L7/8/9上市+31.98万起)
-1. [麻辣王子创始人儿子被隐瞒家产](https://so.toutiao.com/search?keyword=麻辣王子创始人儿子被隐瞒家产)
-1. [《猎冰》剧情高能反转](https://so.toutiao.com/search?keyword=《猎冰》剧情高能反转)
 1. [女子红眼病传染全家 连狗眼都红了](https://so.toutiao.com/search?keyword=女子红眼病传染全家+连狗眼都红了)
-1. [“点读机女孩”已进手术室](https://so.toutiao.com/search?keyword=“点读机女孩”已进手术室)
-1. [延迟退休对不同年代人影响多大](https://so.toutiao.com/search?keyword=延迟退休对不同年代人影响多大)
-1. [姐弟烧伤四位姨妈剃光头捐头皮](https://so.toutiao.com/search?keyword=姐弟烧伤四位姨妈剃光头捐头皮)
 1. [菜鸟速递回应6000名快递员招聘](https://so.toutiao.com/search?keyword=菜鸟速递回应6000名快递员招聘)
-1. [11个月大婴儿被兔子咬断手指](https://so.toutiao.com/search?keyword=11个月大婴儿被兔子咬断手指)
 1. [氢能源汽车会是未来趋势吗](https://so.toutiao.com/search?keyword=氢能源汽车会是未来趋势吗)
 1. [徐冬冬尹子维香港深夜觅食](https://so.toutiao.com/search?keyword=徐冬冬尹子维香港深夜觅食)
-1. [女生靠男子肩膀睡觉视频被父母刷到](https://so.toutiao.com/search?keyword=女生靠男子肩膀睡觉视频被父母刷到)
-1. [老弟去姐家串门被狗追](https://so.toutiao.com/search?keyword=老弟去姐家串门被狗追)
-1. [显微镜下的AD钙奶](https://so.toutiao.com/search?keyword=显微镜下的AD钙奶)
-1. [快递员：挣的还没罚款多只能换工作](https://so.toutiao.com/search?keyword=快递员：挣的还没罚款多只能换工作)
 1. [酒店回应只允许外国人穿拖鞋用餐](https://so.toutiao.com/search?keyword=酒店回应只允许外国人穿拖鞋用餐)
-1. [隔空猥亵少女后又将其强奸该当何罪](https://so.toutiao.com/search?keyword=隔空猥亵少女后又将其强奸该当何罪)
-1. [博主：比亚迪降价意义不止于价格战](https://so.toutiao.com/search?keyword=博主：比亚迪降价意义不止于价格战)
-1. [退税](https://so.toutiao.com/search?keyword=退税)
-1. [中介：房价不能再跌了](https://so.toutiao.com/search?keyword=中介：房价不能再跌了)
-1. [央视主持人任鲁豫有新身份](https://so.toutiao.com/search?keyword=央视主持人任鲁豫有新身份)
 1. [凌晨蹲点退税退到3万多](https://so.toutiao.com/search?keyword=凌晨蹲点退税退到3万多)
 1. [男子1个月偷走邻居40多箱茅台](https://so.toutiao.com/search?keyword=男子1个月偷走邻居40多箱茅台)
-1. [国防部回应美日大规模“夺岛演习”](https://so.toutiao.com/search?keyword=国防部回应美日大规模“夺岛演习”)
 1. [媒体人谈两岸谈判：台当局态度傲慢](https://so.toutiao.com/search?keyword=媒体人谈两岸谈判：台当局态度傲慢)
-1. [前韩国女团成员解散后做女工](https://so.toutiao.com/search?keyword=前韩国女团成员解散后做女工)
 1. [10余名儿童被撞伤 德州市民献血](https://so.toutiao.com/search?keyword=10余名儿童被撞伤+德州市民献血)
 1. [山东德州男子驾车撞伤10余名儿童](https://so.toutiao.com/search?keyword=山东德州男子驾车撞伤10余名儿童)
 1. [快递公司回应新规：按需配送](https://so.toutiao.com/search?keyword=快递公司回应新规：按需配送)
@@ -62,7 +74,6 @@
 1. [对话麻辣王子创始人之子](https://so.toutiao.com/search?keyword=对话麻辣王子创始人之子)
 1. [孟加拉国一餐馆火灾致至少46人死亡](https://so.toutiao.com/search?keyword=孟加拉国一餐馆火灾致至少46人死亡)
 1. [理想汽车将至少投资60亿建5C超充站](https://so.toutiao.com/search?keyword=理想汽车将至少投资60亿建5C超充站)
-1. [A股成交额连续4个交易日超万亿元](https://so.toutiao.com/search?keyword=A股成交额连续4个交易日超万亿元)
 1. [新款理想L8正式上市](https://so.toutiao.com/search?keyword=新款理想L8正式上市)
 1. [医保付费改革后医生怕接收低分病人](https://so.toutiao.com/search?keyword=医保付费改革后医生怕接收低分病人)
 1. [A股成交额再破万亿元](https://so.toutiao.com/search?keyword=A股成交额再破万亿元)
@@ -73,7 +84,6 @@
 1. [氢能产业再迎利好](https://so.toutiao.com/search?keyword=氢能产业再迎利好)
 1. [浓眉：面对掘金我们不能开局慢热](https://so.toutiao.com/search?keyword=浓眉：面对掘金我们不能开局慢热)
 1. [普京国情咨文释放哪些重要信息](https://so.toutiao.com/search?keyword=普京国情咨文释放哪些重要信息)
-1. [拜登在得州活动现场愣神](https://so.toutiao.com/search?keyword=拜登在得州活动现场愣神)
 1. [国乒釜山奖金分配引争议](https://so.toutiao.com/search?keyword=国乒釜山奖金分配引争议)
 1. [近期极端天气对春耕春播影响有限](https://so.toutiao.com/search?keyword=近期极端天气对春耕春播影响有限)
 1. [老人每天拿暖壶到商场取开水](https://so.toutiao.com/search?keyword=老人每天拿暖壶到商场取开水)
@@ -113,7 +123,6 @@
 1. [恒大许家印香港山顶豪宅遭接管](https://so.toutiao.com/search?keyword=恒大许家印香港山顶豪宅遭接管)
 1. [孙俪谈肠胃健康重要性](https://so.toutiao.com/search?keyword=孙俪谈肠胃健康重要性)
 1. [台名嘴历史哥谈“召委”选举结果](https://so.toutiao.com/search?keyword=台名嘴历史哥谈“召委”选举结果)
-1. [广州临时工市场现状](https://so.toutiao.com/search?keyword=广州临时工市场现状)
 1. [CBOT农产品期货主力合约涨跌不一](https://so.toutiao.com/search?keyword=CBOT农产品期货主力合约涨跌不一)
 1. [台名嘴谈新党打响弹劾管碧玲第一枪](https://so.toutiao.com/search?keyword=台名嘴谈新党打响弹劾管碧玲第一枪)
 1. [郑州办理烟花爆竹燃放许可证？辟谣](https://so.toutiao.com/search?keyword=郑州办理烟花爆竹燃放许可证？辟谣)
