--- a/archives/toutiao-search/2024-03-02.md
+++ b/archives/toutiao-search/2024-03-02.md
@@ -1,57 +1,75 @@
 # 2024-03-02
 
-共 95 条
+共 109 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Mar 02 2024 07:00:40 GMT+0800 (China Standard Time) -->
-1. [蔡英文办公室一卫兵举枪自戕身亡](https://so.toutiao.com/search?keyword=蔡英文办公室一卫兵举枪自戕身亡)
-1. [娃哈哈发文请大家理性消费](https://so.toutiao.com/search?keyword=娃哈哈发文请大家理性消费)
+<!-- 最后更新时间 Sat Mar 02 2024 08:23:38 GMT+0800 (China Standard Time) -->
+1. [家长称自家孩子不上早课睡到自然醒](https://so.toutiao.com/search?keyword=家长称自家孩子不上早课睡到自然醒)
+1. [媒体：村书记7亩宅基地要有说法](https://so.toutiao.com/search?keyword=媒体：村书记7亩宅基地要有说法)
 1. [全国两会知识帖](https://so.toutiao.com/search?keyword=全国两会知识帖)
-1. [云南省原副省长张祖林被查](https://so.toutiao.com/search?keyword=云南省原副省长张祖林被查)
-1. [多家快递公司回应新规](https://so.toutiao.com/search?keyword=多家快递公司回应新规)
+1. [娃哈哈发文请大家理性消费](https://so.toutiao.com/search?keyword=娃哈哈发文请大家理性消费)
+1. [特斯拉3个月降价3次](https://so.toutiao.com/search?keyword=特斯拉3个月降价3次)
 1. [大V：金门事件再不给交待将有剧变](https://so.toutiao.com/search?keyword=大V：金门事件再不给交待将有剧变)
-1. [广西男子在直播间从山东买了头活驴](https://so.toutiao.com/search?keyword=广西男子在直播间从山东买了头活驴)
-1. [小鹏汽车碰撞起火时车速145Km/h](https://so.toutiao.com/search?keyword=小鹏汽车碰撞起火时车速145Km/h)
+1. [宣布北部湾北部领海基线有何深意](https://so.toutiao.com/search?keyword=宣布北部湾北部领海基线有何深意)
+1. [退役士兵：若有战召必回](https://so.toutiao.com/search?keyword=退役士兵：若有战召必回)
 1. [天津一银行发生抢劫？系谣言](https://so.toutiao.com/search?keyword=天津一银行发生抢劫？系谣言)
-1. [最高法详解核准劳荣枝死刑原因](https://so.toutiao.com/search?keyword=最高法详解核准劳荣枝死刑原因)
-1. [快递小哥：贯彻快递新规不太现实](https://so.toutiao.com/search?keyword=快递小哥：贯彻快递新规不太现实)
-1. [金龟子女儿生宝宝了](https://so.toutiao.com/search?keyword=金龟子女儿生宝宝了)
+1. [多家快递公司回应新规](https://so.toutiao.com/search?keyword=多家快递公司回应新规)
+1. [蔡英文办公室一卫兵举枪自戕身亡](https://so.toutiao.com/search?keyword=蔡英文办公室一卫兵举枪自戕身亡)
 1. [姚安娜发文回应演技争议](https://so.toutiao.com/search?keyword=姚安娜发文回应演技争议)
-1. [女生靠男子肩膀睡觉视频被父母刷到](https://so.toutiao.com/search?keyword=女生靠男子肩膀睡觉视频被父母刷到)
-1. [官方回应落马官员看守所死亡](https://so.toutiao.com/search?keyword=官方回应落马官员看守所死亡)
+1. [卡扎伊什维利：收获处子球很开心](https://so.toutiao.com/search?keyword=卡扎伊什维利：收获处子球很开心)
+1. [广西男子在直播间从山东买了头活驴](https://so.toutiao.com/search?keyword=广西男子在直播间从山东买了头活驴)
 1. [香港：若楼市再次失控会再采取措施](https://so.toutiao.com/search?keyword=香港：若楼市再次失控会再采取措施)
-1. [巴勒斯坦各派别在莫斯科发联合声明](https://so.toutiao.com/search?keyword=巴勒斯坦各派别在莫斯科发联合声明)
-1. [深夜家中监控被关 女子机智报警](https://so.toutiao.com/search?keyword=深夜家中监控被关+女子机智报警)
-1. [网友称公司饮用水全部采购娃哈哈](https://so.toutiao.com/search?keyword=网友称公司饮用水全部采购娃哈哈)
-1. [德州市民回应为车祸伤者自发献血](https://so.toutiao.com/search?keyword=德州市民回应为车祸伤者自发献血)
-1. [崔康熙：4-0的时候我们踢得很完美](https://so.toutiao.com/search?keyword=崔康熙：4-0的时候我们踢得很完美)
-1. [快递新规将给日常生活带来哪些影响](https://so.toutiao.com/search?keyword=快递新规将给日常生活带来哪些影响)
-1. [菜鸟速递回应6000名快递员招聘](https://so.toutiao.com/search?keyword=菜鸟速递回应6000名快递员招聘)
-1. [中国留学生参加搏击赛被打成植物人](https://so.toutiao.com/search?keyword=中国留学生参加搏击赛被打成植物人)
 1. [快递员：挣的还没罚款多只能换工作](https://so.toutiao.com/search?keyword=快递员：挣的还没罚款多只能换工作)
-1. [KTV 9年倒闭7万家](https://so.toutiao.com/search?keyword=KTV+9年倒闭7万家)
-1. [小猫守在床边“保护”小主人](https://so.toutiao.com/search?keyword=小猫守在床边“保护”小主人)
+1. [快递小哥：贯彻快递新规不太现实](https://so.toutiao.com/search?keyword=快递小哥：贯彻快递新规不太现实)
+1. [女生靠男子肩膀睡觉视频被父母刷到](https://so.toutiao.com/search?keyword=女生靠男子肩膀睡觉视频被父母刷到)
+1. [阿尔兹海默症母亲道歉儿子温柔回应](https://so.toutiao.com/search?keyword=阿尔兹海默症母亲道歉儿子温柔回应)
+1. [氢能源汽车会是未来趋势吗](https://so.toutiao.com/search?keyword=氢能源汽车会是未来趋势吗)
+1. [金龟子女儿生宝宝了](https://so.toutiao.com/search?keyword=金龟子女儿生宝宝了)
+1. [消防栓事件当事人再发声](https://so.toutiao.com/search?keyword=消防栓事件当事人再发声)
+1. [菜鸟速递回应6000名快递员招聘](https://so.toutiao.com/search?keyword=菜鸟速递回应6000名快递员招聘)
+1. [深夜家中监控被关 女子机智报警](https://so.toutiao.com/search?keyword=深夜家中监控被关+女子机智报警)
 1. [新一轮快递业大逃杀开启 谁是赢家](https://so.toutiao.com/search?keyword=新一轮快递业大逃杀开启+谁是赢家)
+1. [全职妈妈记录带娃日常：饺子变饼子](https://so.toutiao.com/search?keyword=全职妈妈记录带娃日常：饺子变饼子)
+1. [KTV 9年倒闭7万家](https://so.toutiao.com/search?keyword=KTV+9年倒闭7万家)
+1. [中国留学生参加搏击赛被打成植物人](https://so.toutiao.com/search?keyword=中国留学生参加搏击赛被打成植物人)
+1. [快递新规将给日常生活带来哪些影响](https://so.toutiao.com/search?keyword=快递新规将给日常生活带来哪些影响)
+1. [中介：房价不能再跌了](https://so.toutiao.com/search?keyword=中介：房价不能再跌了)
+1. [53岁妈妈给25岁女儿生了个弟弟](https://so.toutiao.com/search?keyword=53岁妈妈给25岁女儿生了个弟弟)
+1. [2024款理想L系列的产品配置变化](https://so.toutiao.com/search?keyword=2024款理想L系列的产品配置变化)
+1. [蓝营民代：蔡当局没累积善意](https://so.toutiao.com/search?keyword=蓝营民代：蔡当局没累积善意)
+1. [崔康熙：4-0的时候我们踢得很完美](https://so.toutiao.com/search?keyword=崔康熙：4-0的时候我们踢得很完美)
+1. [网友称公司饮用水全部采购娃哈哈](https://so.toutiao.com/search?keyword=网友称公司饮用水全部采购娃哈哈)
 1. [政协委员建议取消强制自动续费](https://so.toutiao.com/search?keyword=政协委员建议取消强制自动续费)
-1. [六旬男子出轨妻子闺蜜被拍裸照敲诈](https://so.toutiao.com/search?keyword=六旬男子出轨妻子闺蜜被拍裸照敲诈)
+1. [《猎冰》阿美有多悲惨](https://so.toutiao.com/search?keyword=《猎冰》阿美有多悲惨)
+1. [退税](https://so.toutiao.com/search?keyword=退税)
+1. [中国半导体多环节渐获突破](https://so.toutiao.com/search?keyword=中国半导体多环节渐获突破)
+1. [媒体人谈两岸谈判：台当局态度傲慢](https://so.toutiao.com/search?keyword=媒体人谈两岸谈判：台当局态度傲慢)
+1. [男子用油膜清洁剂擦电视结果亮了](https://so.toutiao.com/search?keyword=男子用油膜清洁剂擦电视结果亮了)
+1. [甜馨为cos初音未来道歉](https://so.toutiao.com/search?keyword=甜馨为cos初音未来道歉)
+1. [兴高采烈去退税 结果要补1万8](https://so.toutiao.com/search?keyword=兴高采烈去退税+结果要补1万8)
+1. [特斯拉推出限时补贴](https://so.toutiao.com/search?keyword=特斯拉推出限时补贴)
+1. [小团团停播 知情人称涉案金额太大](https://so.toutiao.com/search?keyword=小团团停播+知情人称涉案金额太大)
+1. [酒店回应只允许外国人穿拖鞋用餐](https://so.toutiao.com/search?keyword=酒店回应只允许外国人穿拖鞋用餐)
 1. [娃哈哈官方店铺销量2天涨超500%](https://so.toutiao.com/search?keyword=娃哈哈官方店铺销量2天涨超500%)
+1. [六旬男子出轨妻子闺蜜被拍裸照敲诈](https://so.toutiao.com/search?keyword=六旬男子出轨妻子闺蜜被拍裸照敲诈)
+1. [菜场小贩笔下的烟火人间](https://so.toutiao.com/search?keyword=菜场小贩笔下的烟火人间)
+1. [理想要求中国所有门店都展示MEGA](https://so.toutiao.com/search?keyword=理想要求中国所有门店都展示MEGA)
+1. [云南省原副省长张祖林被查](https://so.toutiao.com/search?keyword=云南省原副省长张祖林被查)
+1. [小鹏汽车碰撞起火时车速145Km/h](https://so.toutiao.com/search?keyword=小鹏汽车碰撞起火时车速145Km/h)
+1. [最高法详解核准劳荣枝死刑原因](https://so.toutiao.com/search?keyword=最高法详解核准劳荣枝死刑原因)
+1. [官方回应落马官员看守所死亡](https://so.toutiao.com/search?keyword=官方回应落马官员看守所死亡)
+1. [巴勒斯坦各派别在莫斯科发联合声明](https://so.toutiao.com/search?keyword=巴勒斯坦各派别在莫斯科发联合声明)
+1. [德州市民回应为车祸伤者自发献血](https://so.toutiao.com/search?keyword=德州市民回应为车祸伤者自发献血)
+1. [小猫守在床边“保护”小主人](https://so.toutiao.com/search?keyword=小猫守在床边“保护”小主人)
 1. [渔船事件第12次闭门会议未如期举行](https://so.toutiao.com/search?keyword=渔船事件第12次闭门会议未如期举行)
 1. [下一辆车选油车还是电车](https://so.toutiao.com/search?keyword=下一辆车选油车还是电车)
 1. [抗日运动纪念仪式上尹锡悦语出惊人](https://so.toutiao.com/search?keyword=抗日运动纪念仪式上尹锡悦语出惊人)
 1. [女子用暗语机智报警获救](https://so.toutiao.com/search?keyword=女子用暗语机智报警获救)
-1. [53岁妈妈给25岁女儿生了个弟弟](https://so.toutiao.com/search?keyword=53岁妈妈给25岁女儿生了个弟弟)
 1. [昆明机场会惩罚每一个踩点的人](https://so.toutiao.com/search?keyword=昆明机场会惩罚每一个踩点的人)
-1. [中介：房价不能再跌了](https://so.toutiao.com/search?keyword=中介：房价不能再跌了)
 1. [央行要求支付宝提高境外卡绑卡效率](https://so.toutiao.com/search?keyword=央行要求支付宝提高境外卡绑卡效率)
-1. [退税](https://so.toutiao.com/search?keyword=退税)
-1. [《猎冰》阿美有多悲惨](https://so.toutiao.com/search?keyword=《猎冰》阿美有多悲惨)
 1. [恒大许家印香港山顶豪宅遭接管](https://so.toutiao.com/search?keyword=恒大许家印香港山顶豪宅遭接管)
-1. [媒体人谈两岸谈判：台当局态度傲慢](https://so.toutiao.com/search?keyword=媒体人谈两岸谈判：台当局态度傲慢)
-1. [兴高采烈去退税 结果要补1万8](https://so.toutiao.com/search?keyword=兴高采烈去退税+结果要补1万8)
 1. [理想MEGA正式上市 售价55.98万元](https://so.toutiao.com/search?keyword=理想MEGA正式上市+售价55.98万元)
-1. [男子用油膜清洁剂擦电视结果亮了](https://so.toutiao.com/search?keyword=男子用油膜清洁剂擦电视结果亮了)
 1. [支付宝响应央行指导提额](https://so.toutiao.com/search?keyword=支付宝响应央行指导提额)
-1. [特斯拉推出限时补贴](https://so.toutiao.com/search?keyword=特斯拉推出限时补贴)
 1. [博主：比亚迪降价意义不止于价格战](https://so.toutiao.com/search?keyword=博主：比亚迪降价意义不止于价格战)
 1. [小伙自曝在非洲当酋长能娶4个老婆](https://so.toutiao.com/search?keyword=小伙自曝在非洲当酋长能娶4个老婆)
 1. [美国警方对赵安吉之死进行刑事调查](https://so.toutiao.com/search?keyword=美国警方对赵安吉之死进行刑事调查)
@@ -59,11 +77,8 @@
 1. [胡塞领导人：我们会让敌人大吃一惊](https://so.toutiao.com/search?keyword=胡塞领导人：我们会让敌人大吃一惊)
 1. [多方对“快递新规”态度不一](https://so.toutiao.com/search?keyword=多方对“快递新规”态度不一)
 1. [我国芯片产业的发展及破局策略](https://so.toutiao.com/search?keyword=我国芯片产业的发展及破局策略)
-1. [氢能源汽车会是未来趋势吗](https://so.toutiao.com/search?keyword=氢能源汽车会是未来趋势吗)
 1. [英伟达内部人士加大抛售力度](https://so.toutiao.com/search?keyword=英伟达内部人士加大抛售力度)
-1. [理想要求中国所有门店都展示MEGA](https://so.toutiao.com/search?keyword=理想要求中国所有门店都展示MEGA)
 1. [俄乌冲突是如何托举美国经济的](https://so.toutiao.com/search?keyword=俄乌冲突是如何托举美国经济的)
-1. [菜场小贩笔下的烟火人间](https://so.toutiao.com/search?keyword=菜场小贩笔下的烟火人间)
 1. [律师：快递新规不“新”](https://so.toutiao.com/search?keyword=律师：快递新规不“新”)
 1. [龙年车市价格战持续升温](https://so.toutiao.com/search?keyword=龙年车市价格战持续升温)
 1. [美国：普京核战争风险警告不负责任](https://so.toutiao.com/search?keyword=美国：普京核战争风险警告不负责任)
@@ -80,7 +95,6 @@
 1. [警方时隔26年破获一交通肇事逃逸案](https://so.toutiao.com/search?keyword=警方时隔26年破获一交通肇事逃逸案)
 1. [新疆政协和田地区工委副主任被查](https://so.toutiao.com/search?keyword=新疆政协和田地区工委副主任被查)
 1. [广州临时工市场现状](https://so.toutiao.com/search?keyword=广州临时工市场现状)
-1. [甜馨为cos初音未来道歉](https://so.toutiao.com/search?keyword=甜馨为cos初音未来道歉)
 1. [张颂文《猎冰》豆瓣开分4.7](https://so.toutiao.com/search?keyword=张颂文《猎冰》豆瓣开分4.7)
 1. [德州撞人事故2死6伤 市民排队献血](https://so.toutiao.com/search?keyword=德州撞人事故2死6伤+市民排队献血)
 1. [山东男子驾车撞人致2死6重伤](https://so.toutiao.com/search?keyword=山东男子驾车撞人致2死6重伤)
