--- a/archives/toutiao-search/2024-03-02.md
+++ b/archives/toutiao-search/2024-03-02.md
@@ -1,55 +1,69 @@
 # 2024-03-02
 
-共 125 条
+共 137 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Mar 02 2024 09:35:30 GMT+0800 (China Standard Time) -->
-1. [家长称自家孩子不上早课睡到自然醒](https://so.toutiao.com/search?keyword=家长称自家孩子不上早课睡到自然醒)
+<!-- 最后更新时间 Sat Mar 02 2024 10:09:56 GMT+0800 (China Standard Time) -->
 1. [媒体：村书记7亩宅基地要有说法](https://so.toutiao.com/search?keyword=媒体：村书记7亩宅基地要有说法)
+1. [氢能源涨势能持续多久](https://so.toutiao.com/search?keyword=氢能源涨势能持续多久)
 1. [全国两会知识帖](https://so.toutiao.com/search?keyword=全国两会知识帖)
-1. [中国半导体多环节渐获突破](https://so.toutiao.com/search?keyword=中国半导体多环节渐获突破)
 1. [退役士兵：若有战召必回](https://so.toutiao.com/search?keyword=退役士兵：若有战召必回)
-1. [快递不得擅自放驿站能落实吗](https://so.toutiao.com/search?keyword=快递不得擅自放驿站能落实吗)
-1. [特斯拉3个月降价3次](https://so.toutiao.com/search?keyword=特斯拉3个月降价3次)
+1. [快递好几天没送 站点堆积如山](https://so.toutiao.com/search?keyword=快递好几天没送+站点堆积如山)
+1. [上市公司积极拥抱氢能源万亿产业链](https://so.toutiao.com/search?keyword=上市公司积极拥抱氢能源万亿产业链)
 1. [大V：金门事件再不给交待将有剧变](https://so.toutiao.com/search?keyword=大V：金门事件再不给交待将有剧变)
+1. [娃哈哈发文请大家理性消费](https://so.toutiao.com/search?keyword=娃哈哈发文请大家理性消费)
 1. [天津一银行发生抢劫？系谣言](https://so.toutiao.com/search?keyword=天津一银行发生抢劫？系谣言)
-1. [中传回应点读机女孩“休学”](https://so.toutiao.com/search?keyword=中传回应点读机女孩“休学”)
+1. [土耳其总统：加沙正在发生种族灭绝](https://so.toutiao.com/search?keyword=土耳其总统：加沙正在发生种族灭绝)
 1. [朱珠女儿近照曝光](https://so.toutiao.com/search?keyword=朱珠女儿近照曝光)
 1. [姚安娜发文回应演技争议](https://so.toutiao.com/search?keyword=姚安娜发文回应演技争议)
 1. [宣布北部湾北部领海基线有何深意](https://so.toutiao.com/search?keyword=宣布北部湾北部领海基线有何深意)
-1. [娃哈哈发文请大家理性消费](https://so.toutiao.com/search?keyword=娃哈哈发文请大家理性消费)
-1. [土耳其总统：加沙正在发生种族灭绝](https://so.toutiao.com/search?keyword=土耳其总统：加沙正在发生种族灭绝)
-1. [里卡多：被迫调整阵型导致输球](https://so.toutiao.com/search?keyword=里卡多：被迫调整阵型导致输球)
-1. [多家快递公司回应新规](https://so.toutiao.com/search?keyword=多家快递公司回应新规)
 1. [蔡英文办公室一卫兵举枪自戕身亡](https://so.toutiao.com/search?keyword=蔡英文办公室一卫兵举枪自戕身亡)
-1. [比亚迪品牌降价汇总](https://so.toutiao.com/search?keyword=比亚迪品牌降价汇总)
+1. [快递不得擅自放驿站能落实吗](https://so.toutiao.com/search?keyword=快递不得擅自放驿站能落实吗)
 1. [快递员：挣的还没罚款多只能换工作](https://so.toutiao.com/search?keyword=快递员：挣的还没罚款多只能换工作)
-1. [农村老人补缴4万养老金次月领多少](https://so.toutiao.com/search?keyword=农村老人补缴4万养老金次月领多少)
-1. [广西男子在直播间从山东买了头活驴](https://so.toutiao.com/search?keyword=广西男子在直播间从山东买了头活驴)
-1. [女生靠男子肩膀睡觉视频被父母刷到](https://so.toutiao.com/search?keyword=女生靠男子肩膀睡觉视频被父母刷到)
-1. [河南一小学拖欠教师工资无人上课](https://so.toutiao.com/search?keyword=河南一小学拖欠教师工资无人上课)
-1. [菜鸟速递回应6000名快递员招聘](https://so.toutiao.com/search?keyword=菜鸟速递回应6000名快递员招聘)
-1. [新一轮快递业大逃杀开启 谁是赢家](https://so.toutiao.com/search?keyword=新一轮快递业大逃杀开启+谁是赢家)
-1. [媒体：泰山队大有潜力可挖](https://so.toutiao.com/search?keyword=媒体：泰山队大有潜力可挖)
-1. [民众拍到大陆海警船与台海巡艇同框](https://so.toutiao.com/search?keyword=民众拍到大陆海警船与台海巡艇同框)
-1. [退税](https://so.toutiao.com/search?keyword=退税)
-1. [深夜家中监控被关 女子机智报警](https://so.toutiao.com/search?keyword=深夜家中监控被关+女子机智报警)
-1. [中介：房价不能再跌了](https://so.toutiao.com/search?keyword=中介：房价不能再跌了)
-1. [阿尔兹海默症母亲道歉儿子温柔回应](https://so.toutiao.com/search?keyword=阿尔兹海默症母亲道歉儿子温柔回应)
-1. [金龟子女儿生宝宝了](https://so.toutiao.com/search?keyword=金龟子女儿生宝宝了)
-1. [中国留学生参加搏击赛被打成植物人](https://so.toutiao.com/search?keyword=中国留学生参加搏击赛被打成植物人)
-1. [曝蔡英文曾找郭正亮处理两岸关系](https://so.toutiao.com/search?keyword=曝蔡英文曾找郭正亮处理两岸关系)
-1. [氢能源汽车会是未来趋势吗](https://so.toutiao.com/search?keyword=氢能源汽车会是未来趋势吗)
-1. [武磊2球登顶中超射手榜](https://so.toutiao.com/search?keyword=武磊2球登顶中超射手榜)
-1. [政协委员建议取消强制自动续费](https://so.toutiao.com/search?keyword=政协委员建议取消强制自动续费)
-1. [楼市“小阳春”还会来吗](https://so.toutiao.com/search?keyword=楼市“小阳春”还会来吗)
+1. [特斯拉3个月降价3次](https://so.toutiao.com/search?keyword=特斯拉3个月降价3次)
 1. [以色列民众举行示威要求在加沙停火](https://so.toutiao.com/search?keyword=以色列民众举行示威要求在加沙停火)
+1. [多家快递公司回应新规](https://so.toutiao.com/search?keyword=多家快递公司回应新规)
+1. [氢能源汽车会是未来趋势吗](https://so.toutiao.com/search?keyword=氢能源汽车会是未来趋势吗)
+1. [家长称自家孩子不上早课睡到自然醒](https://so.toutiao.com/search?keyword=家长称自家孩子不上早课睡到自然醒)
+1. [广西男子在直播间从山东买了头活驴](https://so.toutiao.com/search?keyword=广西男子在直播间从山东买了头活驴)
+1. [比亚迪12天8款主力车降价](https://so.toutiao.com/search?keyword=比亚迪12天8款主力车降价)
+1. [卡拉布里亚：这是一场艰难的胜利](https://so.toutiao.com/search?keyword=卡拉布里亚：这是一场艰难的胜利)
+1. [新一轮快递业大逃杀开启 谁是赢家](https://so.toutiao.com/search?keyword=新一轮快递业大逃杀开启+谁是赢家)
+1. [女生靠男子肩膀睡觉视频被父母刷到](https://so.toutiao.com/search?keyword=女生靠男子肩膀睡觉视频被父母刷到)
+1. [曝蔡英文曾找郭正亮处理两岸关系](https://so.toutiao.com/search?keyword=曝蔡英文曾找郭正亮处理两岸关系)
+1. [民众拍到大陆海警船与台海巡艇同框](https://so.toutiao.com/search?keyword=民众拍到大陆海警船与台海巡艇同框)
+1. [河南一小学拖欠教师工资无人上课](https://so.toutiao.com/search?keyword=河南一小学拖欠教师工资无人上课)
+1. [中介：房价不能再跌了](https://so.toutiao.com/search?keyword=中介：房价不能再跌了)
+1. [菜鸟速递回应6000名快递员招聘](https://so.toutiao.com/search?keyword=菜鸟速递回应6000名快递员招聘)
+1. [百强房企“座次”仍在变化](https://so.toutiao.com/search?keyword=百强房企“座次”仍在变化)
+1. [委员建议尽快出台校外培训相关法规](https://so.toutiao.com/search?keyword=委员建议尽快出台校外培训相关法规)
+1. [深夜家中监控被关 女子机智报警](https://so.toutiao.com/search?keyword=深夜家中监控被关+女子机智报警)
 1. [网友称公司饮用水全部采购娃哈哈](https://so.toutiao.com/search?keyword=网友称公司饮用水全部采购娃哈哈)
+1. [武磊2球登顶中超射手榜](https://so.toutiao.com/search?keyword=武磊2球登顶中超射手榜)
+1. [问界蝉联新势力月销量冠军](https://so.toutiao.com/search?keyword=问界蝉联新势力月销量冠军)
+1. [韩国担忧“3月医疗大乱”](https://so.toutiao.com/search?keyword=韩国担忧“3月医疗大乱”)
+1. [楼市“小阳春”还会来吗](https://so.toutiao.com/search?keyword=楼市“小阳春”还会来吗)
+1. [菜场小贩笔下的烟火人间](https://so.toutiao.com/search?keyword=菜场小贩笔下的烟火人间)
+1. [媒体：泰山队大有潜力可挖](https://so.toutiao.com/search?keyword=媒体：泰山队大有潜力可挖)
+1. [香港楼市撤辣点燃购房者置业热情](https://so.toutiao.com/search?keyword=香港楼市撤辣点燃购房者置业热情)
+1. [恩里克：我们迟早得适应没有姆巴佩](https://so.toutiao.com/search?keyword=恩里克：我们迟早得适应没有姆巴佩)
+1. [金龟子女儿生宝宝了](https://so.toutiao.com/search?keyword=金龟子女儿生宝宝了)
+1. [农村老人补缴4万养老金次月领多少](https://so.toutiao.com/search?keyword=农村老人补缴4万养老金次月领多少)
+1. [KTV 9年倒闭7万家](https://so.toutiao.com/search?keyword=KTV+9年倒闭7万家)
+1. [美媒就加沙援助点遭袭事件喊话拜登](https://so.toutiao.com/search?keyword=美媒就加沙援助点遭袭事件喊话拜登)
 1. [53岁妈妈给25岁女儿生了个弟弟](https://so.toutiao.com/search?keyword=53岁妈妈给25岁女儿生了个弟弟)
+1. [中国留学生参加搏击赛被打成植物人](https://so.toutiao.com/search?keyword=中国留学生参加搏击赛被打成植物人)
+1. [理想L7/8/9上市 31.98万起](https://so.toutiao.com/search?keyword=理想L7/8/9上市+31.98万起)
+1. [中国半导体多环节渐获突破](https://so.toutiao.com/search?keyword=中国半导体多环节渐获突破)
+1. [中传回应点读机女孩“休学”](https://so.toutiao.com/search?keyword=中传回应点读机女孩“休学”)
+1. [里卡多：被迫调整阵型导致输球](https://so.toutiao.com/search?keyword=里卡多：被迫调整阵型导致输球)
+1. [比亚迪品牌降价汇总](https://so.toutiao.com/search?keyword=比亚迪品牌降价汇总)
+1. [退税](https://so.toutiao.com/search?keyword=退税)
+1. [阿尔兹海默症母亲道歉儿子温柔回应](https://so.toutiao.com/search?keyword=阿尔兹海默症母亲道歉儿子温柔回应)
+1. [政协委员建议取消强制自动续费](https://so.toutiao.com/search?keyword=政协委员建议取消强制自动续费)
 1. [全职妈妈记录带娃日常：饺子变饼子](https://so.toutiao.com/search?keyword=全职妈妈记录带娃日常：饺子变饼子)
 1. [《猎冰》阿美有多悲惨](https://so.toutiao.com/search?keyword=《猎冰》阿美有多悲惨)
 1. [酒店回应只允许外国人穿拖鞋用餐](https://so.toutiao.com/search?keyword=酒店回应只允许外国人穿拖鞋用餐)
-1. [菜场小贩笔下的烟火人间](https://so.toutiao.com/search?keyword=菜场小贩笔下的烟火人间)
 1. [麻辣王子创始人儿子被隐瞒家产](https://so.toutiao.com/search?keyword=麻辣王子创始人儿子被隐瞒家产)
 1. [女子用暗语机智报警获救](https://so.toutiao.com/search?keyword=女子用暗语机智报警获救)
 1. [纽约股市三大股指1日上涨](https://so.toutiao.com/search?keyword=纽约股市三大股指1日上涨)
@@ -58,7 +72,6 @@
 1. [香港：若楼市再次失控会再采取措施](https://so.toutiao.com/search?keyword=香港：若楼市再次失控会再采取措施)
 1. [快递小哥：贯彻快递新规不太现实](https://so.toutiao.com/search?keyword=快递小哥：贯彻快递新规不太现实)
 1. [消防栓事件当事人再发声](https://so.toutiao.com/search?keyword=消防栓事件当事人再发声)
-1. [KTV 9年倒闭7万家](https://so.toutiao.com/search?keyword=KTV+9年倒闭7万家)
 1. [快递新规将给日常生活带来哪些影响](https://so.toutiao.com/search?keyword=快递新规将给日常生活带来哪些影响)
 1. [2024款理想L系列的产品配置变化](https://so.toutiao.com/search?keyword=2024款理想L系列的产品配置变化)
 1. [蓝营民代：蔡当局没累积善意](https://so.toutiao.com/search?keyword=蓝营民代：蔡当局没累积善意)
@@ -123,7 +136,6 @@
 1. [辽宁一女子在商场内跳楼](https://so.toutiao.com/search?keyword=辽宁一女子在商场内跳楼)
 1. [《周处除三害》被控诉抄袭](https://so.toutiao.com/search?keyword=《周处除三害》被控诉抄袭)
 1. [前韩国女团成员解散后做女工](https://so.toutiao.com/search?keyword=前韩国女团成员解散后做女工)
-1. [理想L7/8/9上市 31.98万起](https://so.toutiao.com/search?keyword=理想L7/8/9上市+31.98万起)
 1. [蔡英文办公室一卫兵头部中枪](https://so.toutiao.com/search?keyword=蔡英文办公室一卫兵头部中枪)
 1. [梁静回应成为大家的梦中情妈](https://so.toutiao.com/search?keyword=梁静回应成为大家的梦中情妈)
 1. [女生痛经严重 查出长了2个“子宫”](https://so.toutiao.com/search?keyword=女生痛经严重+查出长了2个“子宫”)
