--- a/archives/zhihu-search/2024-03-02.md
+++ b/archives/zhihu-search/2024-03-02.md
@@ -1,13 +1,14 @@
 # 2024-03-02
 
-共 10 条
+共 11 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Sat Mar 02 2024 11:00:38 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Mar 02 2024 12:00:36 GMT+0800 (China Standard Time) -->
 1. [四六级成绩](https://www.zhihu.com/search?q=四六级成绩)
 1. [英语四六级](https://www.zhihu.com/search?q=英语四六级)
 1. [英语六级](https://www.zhihu.com/search?q=英语六级)
 1. [英语四级](https://www.zhihu.com/search?q=英语四级)
+1. [吴谢宇](https://www.zhihu.com/search?q=吴谢宇)
 1. [第一眼就感到震撼的图片](https://www.zhihu.com/search?q=第一眼就感到震撼的图片)
 1. [虾为啥要长得这么适合被吃](https://www.zhihu.com/search?q=虾为啥要长得这么适合被吃)
 1. [烟火人家](https://www.zhihu.com/search?q=烟火人家)
